--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "zip": "rm -f *.zip && zip  -r `git branch | grep '\\* ' | cut -d ' ' -f 2`.zip . -x 'node_modules/*'"
   },
   "dependencies": {
-    "element-ui": "^2.15.6",
-    "less-loader": "^10.2.0",
-    "node-sass": "^7.0.1",
-    "sass-loader": "^12.6.0",
+    "axios": "^0.18.0",
+    "element-ui": "^2.3.9",
+    "less": "^4.1.2",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
